# usbipdcpp_esp32

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README-zh.md  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3
components/usbipdcpp/: CMakeLists.txt  idf_component.yml
components/usbipdcpp/include/esp32_handler/: Esp32DeviceHandler.h  Esp32Server.h  tools.h
components/usbipdcpp/src/esp32_handler/: Esp32DeviceHandler.cpp  Esp32Server.cpp  tools.cpp
main/: CMakeLists.txt  Kconfig.projbuild  esp32_usbipdcpp.cpp  idf_component.yml  usbipd_server_test.cpp
main/include/: mock_mouse.h
main/src/: mock_mouse.cpp
